--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Brandon Abela Portfolio Website
+title: Dashboard System Website
 email: brandonabela9@gmail.com
 baseurl: "" # the sub path of your site
 url: "/" # the base hostname & protocol for your site
