--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,7 @@ pages:
     - npm install -g @angular/cli@8.3.9
     - npm install
     - ng build --prod --base-href=/
+    - cp public/index.html public/404.html
   artifacts:
     paths:
       - public
