--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,9 +7,13 @@ pages:
     - npm install -g @angular/cli@8.3.9
     - npm install
     - ng build --prod --base-href=/
+
+    - mkdir public/theme
     - cp public/index.html public/theme/alert.html
     - cp public/index.html public/theme/cards.html
     - cp public/index.html public/theme/modals.html
+
+    - mkdir public/trello
     - cp public/index.html public/trello/overview.html
     - cp public/index.html public/trello/document.html
     - cp public/index.html public/404.html
