Fix router refresh issue

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,10 +4,9 @@ pages:
     paths:
       - node_modules/
   script:
-    - npm install -g @angular/cli@8.3.9
+    - npm install -g @angular/cli@8.3.13
     - npm install
-    - ng build --prod --base-href=https://dashboardsystem.gitlab.io/
-    - cp public/index.html public/404.html
+    - ng build --prod
   artifacts:
     paths:
       - public
