--- a/package.json
+++ b/package.json
@@ -7,28 +7,29 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "gzipper": "gzipper"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.2.12",
-    "@angular/common": "~8.2.12",
-    "@angular/compiler": "~8.2.12",
-    "@angular/core": "~8.2.12",
-    "@angular/forms": "~8.2.12",
-    "@angular/platform-browser": "~8.2.12",
-    "@angular/platform-browser-dynamic": "~8.2.12",
-    "@angular/platform-server": "~8.2.12",
-    "@angular/router": "~8.2.12",
-    "@fortawesome/fontawesome-free": "^5.11.2",
-    "bootstrap": "^4.3.1",
+    "@angular/animations": "^8.2.14",
+    "@angular/common": "^8.2.14",
+    "@angular/compiler": "^8.2.14",
+    "@angular/core": "^8.2.14",
+    "@angular/forms": "^8.2.14",
+    "@angular/platform-browser": "^8.2.14",
+    "@angular/platform-browser-dynamic": "^8.2.14",
+    "@angular/platform-server": "^8.2.14",
+    "@angular/router": "^8.2.14",
+    "@fortawesome/fontawesome-free": "^5.12.1",
+    "bootstrap": "^4.4.1",
     "bootstrap-notify": "^3.1.3",
-    "codelyzer": "^5.2.0",
+    "codelyzer": "^5.2.1",
     "file-saver": "^2.0.2",
     "jquery": "^3.4.1",
     "jszip": "^3.2.2",
-    "popper.js": "^1.16.0",
-    "rxjs": "~6.5.3",
+    "popper.js": "^1.16.1",
+    "rxjs": "^6.5.4",
     "simplebar": "^4.2.3",
     "stream": "0.0.2",
     "tslib": "^1.9.0",
@@ -37,12 +38,14 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.14",
-    "@angular/cli": "^8.3.14",
-    "@angular/compiler-cli": "~8.2.12",
-    "@angular/language-service": "~8.2.12",
+    "@angular-devkit/build-angular": "^0.803.24",
+    "@angular/cli": "^8.3.24",
+    "@angular/compiler-cli": "^8.2.14",
+    "@angular/language-service": "^8.2.14",
     "@types/node": "~8.9.4",
-    "angular-prerender": "^4.1.21",
+    "angular-prerender": "^4.4.3",
+    "guess-parser": "^0.4.15",
+    "gzipper": "^3.4.2",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.4.3"
