--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,10 +11,10 @@ pages:
     - ng run DashboardSystem:server
     - npx angular-prerender
     - cp public/theme/404/index.html public/404.html
-    - gzipper --verbose ./public ./gzipped
+    - gzipper --verbose ./public
   artifacts:
     paths:
-      - gzipped
+      - public
   only:
     - master
     - pages
