--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
+    "dev:ssr": "ng run DashboardSystem:serve-ssr",
+    "serve:ssr": "node dist/DashboardSystem-server/main.js",
+    "build:ssr": "ng build --prod && ng run DashboardSystem:server:production",
+    "prerender": "ng run DashboardSystem:prerender",
     "gzipper": "gzipper"
   },
   "private": true,
@@ -22,32 +26,47 @@
     "@angular/platform-server": "^9.0.0",
     "@angular/router": "^9.0.0",
     "@fortawesome/fontawesome-free": "^5.12.1",
+    "@nguniversal/express-engine": "^9.0.0",
     "bootstrap": "^4.4.1",
     "bootstrap-notify": "^3.1.3",
+    "bufferutil": "^4.0.1",
+    "canvas": "^2.6.1",
     "codelyzer": "^5.1.2",
+    "express": "^4.15.2",
+    "fibers": "^4.0.2",
     "file-saver": "^2.0.2",
+    "html-webpack-plugin": "^3.2.0",
     "jquery": "^3.4.1",
+    "jsdom": "^16.1.0",
     "jszip": "^3.2.2",
+    "node-sass": "^4.13.1",
     "popper.js": "^1.16.1",
     "rxjs": "^6.5.4",
+    "sass-loader": "^8.0.2",
     "simplebar": "^4.2.3",
     "stream": "0.0.2",
     "tslib": "^1.10.0",
+    "utf-8-validate": "^5.0.2",
+    "webpack-subresource-integrity": "^1.4.0",
     "wfk-montserrat": "^1.0.0",
     "wfk-poppins": "^1.0.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "^0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.900.1",
+    "@angular-devkit/core": "^9.0.1",
     "@angular/cli": "^9.0.1",
     "@angular/compiler-cli": "^9.0.0",
     "@angular/language-service": "^9.0.0",
+    "@nguniversal/builders": "^9.0.0",
+    "@types/express": "^4.17.0",
     "@types/node": "^12.11.1",
-    "angular-prerender": "^4.4.3",
     "guess-parser": "^0.4.15",
     "gzipper": "^3.5.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.7.5"
+    "typescript": "~3.7.5",
+    "ws": "^7.2.1",
+    "xhr2": "^0.2.0"
   }
 }
