--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "@types/node": "^12.11.1",
     "guess-parser": "^0.4.17",
     "gzipper": "^3.5.0",
-    "ts-node": "~7.0.0",
+    "ts-node": "^8.7.0",
     "tslint": "~5.15.0",
     "typescript": "~3.7.5",
     "ws": "^7.2.1",
