--- a/package.json
+++ b/package.json
@@ -16,16 +16,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^9.1.9",
-    "@angular/common": "^9.1.9",
-    "@angular/compiler": "^9.1.9",
-    "@angular/core": "^9.1.9",
-    "@angular/forms": "^9.1.9",
-    "@angular/platform-browser": "^9.1.9",
-    "@angular/platform-browser-dynamic": "^9.1.9",
-    "@angular/platform-server": "^9.1.9",
-    "@angular/router": "^9.1.9",
-    "@fortawesome/fontawesome-free": "^5.13.0",
+    "@angular/animations": "^9.1.11",
+    "@angular/common": "^9.1.11",
+    "@angular/compiler": "^9.1.11",
+    "@angular/core": "^9.1.11",
+    "@angular/forms": "^9.1.11",
+    "@angular/platform-browser": "^9.1.11",
+    "@angular/platform-browser-dynamic": "^9.1.11",
+    "@angular/platform-server": "^9.1.11",
+    "@angular/router": "^9.1.11",
+    "@fortawesome/fontawesome-free": "^5.13.1",
     "@nguniversal/express-engine": "^9.1.1",
     "bootstrap": "^4.5.0",
     "bootstrap-notify": "^3.1.3",
@@ -37,8 +37,10 @@
     "file-saver": "^2.0.2",
     "html-webpack-plugin": "^3.2.0",
     "jquery": "^3.5.1",
+    "jquery-ui-dist": "^1.12.1",
     "jsdom": "^16.2.2",
-    "jszip": "^3.4.0",
+    "jsmind": "^0.4.6",
+    "jszip": "^3.5.0",
     "node-sass": "^4.14.1",
     "popper.js": "^1.16.1",
     "rxjs": "^6.5.5",
@@ -53,14 +55,14 @@
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.901.7",
-    "@angular-devkit/core": "^9.1.7",
-    "@angular/cli": "^9.1.7",
-    "@angular/compiler-cli": "^9.1.9",
-    "@angular/language-service": "^9.1.9",
+    "@angular-devkit/build-angular": "^0.901.9",
+    "@angular-devkit/core": "^9.1.9",
+    "@angular/cli": "^9.1.9",
+    "@angular/compiler-cli": "^9.1.11",
+    "@angular/language-service": "^9.1.11",
     "@nguniversal/builders": "^9.1.1",
     "@types/express": "^4.17.6",
-    "@types/node": "^12.12.43",
+    "@types/node": "^12.12.47",
     "guess-parser": "^0.4.18",
     "gzipper": "^3.7.0",
     "ts-node": "^8.10.2",
