--- a/angular.json
+++ b/angular.json
@@ -48,6 +48,7 @@
             ],
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.css",
+              "node_modules/simplebar/dist/simplebar.css",
               "node_modules/@fortawesome/fontawesome-free/css/all.css",
               "node_modules/wfk-poppins/poppins.css",
               "node_modules/wfk-montserrat/montserrat.css",
