--- a/package.json
+++ b/package.json
@@ -16,19 +16,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^9.1.11",
-    "@angular/common": "^9.1.11",
-    "@angular/compiler": "^9.1.11",
-    "@angular/core": "^9.1.11",
-    "@angular/forms": "^9.1.11",
-    "@angular/platform-browser": "^9.1.11",
-    "@angular/platform-browser-dynamic": "^9.1.11",
-    "@angular/platform-server": "^9.1.11",
-    "@angular/router": "^9.1.11",
+    "@angular/animations": "^9.1.12",
+    "@angular/common": "^9.1.12",
+    "@angular/compiler": "^9.1.12",
+    "@angular/core": "^9.1.12",
+    "@angular/forms": "^9.1.12",
+    "@angular/platform-browser": "^9.1.12",
+    "@angular/platform-browser-dynamic": "^9.1.12",
+    "@angular/platform-server": "^9.1.12",
+    "@angular/router": "^9.1.12",
     "@fortawesome/fontawesome-free": "^5.13.1",
     "@nguniversal/express-engine": "^9.1.1",
     "bootstrap": "^4.5.0",
-    "bootstrap-notify": "^3.1.3",
     "bufferutil": "^4.0.1",
     "canvas": "^2.6.1",
     "codelyzer": "^5.2.2",
@@ -41,9 +40,10 @@
     "jsdom": "^16.2.2",
     "jsmind": "^0.4.6",
     "jszip": "^3.5.0",
+    "ngx-toastr": "^12.1.0",
     "node-sass": "^4.14.1",
     "popper.js": "^1.16.1",
-    "rxjs": "^6.5.5",
+    "rxjs": "^6.6.0",
     "sass-loader": "^8.0.2",
     "simplebar": "^4.2.3",
     "stream": "0.0.2",
@@ -55,20 +55,20 @@
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.901.9",
-    "@angular-devkit/core": "^9.1.9",
-    "@angular/cli": "^9.1.9",
-    "@angular/compiler-cli": "^9.1.11",
-    "@angular/language-service": "^9.1.11",
+    "@angular-devkit/build-angular": "^0.901.10",
+    "@angular-devkit/core": "^9.1.10",
+    "@angular/cli": "^9.1.10",
+    "@angular/compiler-cli": "^9.1.12",
+    "@angular/language-service": "^9.1.12",
     "@nguniversal/builders": "^9.1.1",
-    "@types/express": "^4.17.6",
-    "@types/node": "^12.12.47",
+    "@types/express": "^4.17.7",
+    "@types/node": "^12.12.48",
     "guess-parser": "^0.4.18",
     "gzipper": "^3.7.0",
     "ts-node": "^8.10.2",
     "tslint": "~5.15.0",
     "typescript": "~3.7.5",
-    "ws": "^7.3.0",
+    "ws": "^7.3.1",
     "xhr2": "^0.2.0"
   }
 }
