--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ pages:
       - node_modules/
   script:
     - npm install -g @angular/cli@9.1.10
-    - npm install -g gzipper
+    - npm install -g gzipper@3.7.0
     - npm install
     - npm run build:ssr
     - npm run prerender
