--- a/package.json
+++ b/package.json
@@ -16,21 +16,21 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^9.1.12",
-    "@angular/common": "^9.1.12",
-    "@angular/compiler": "^9.1.12",
-    "@angular/core": "^9.1.12",
-    "@angular/forms": "^9.1.12",
-    "@angular/platform-browser": "^9.1.12",
-    "@angular/platform-browser-dynamic": "^9.1.12",
-    "@angular/platform-server": "^9.1.12",
-    "@angular/router": "^9.1.12",
+    "@angular/animations": "^12.0.4",
+    "@angular/common": "^12.0.4",
+    "@angular/compiler": "^12.0.4",
+    "@angular/core": "^12.0.4",
+    "@angular/forms": "^12.0.4",
+    "@angular/platform-browser": "^12.0.4",
+    "@angular/platform-browser-dynamic": "^12.0.4",
+    "@angular/platform-server": "^12.0.4",
+    "@angular/router": "^12.0.4",
     "@fortawesome/fontawesome-free": "^5.13.1",
-    "@nguniversal/express-engine": "^9.1.1",
+    "@nguniversal/express-engine": "^12.0.2",
     "bootstrap": "^4.5.0",
     "bufferutil": "^4.0.1",
     "canvas": "^2.6.1",
-    "codelyzer": "^5.2.2",
+    "codelyzer": "^6.0.0",
     "express": "^4.15.2",
     "fibers": "^4.0.3",
     "file-saver": "^2.0.2",
@@ -41,33 +41,32 @@
     "jsmind": "^0.4.6",
     "jszip": "^3.5.0",
     "ngx-toastr": "^12.1.0",
-    "node-sass": "^4.14.1",
     "popper.js": "^1.16.1",
     "rxjs": "^6.6.0",
     "sass-loader": "^8.0.2",
     "simplebar": "^4.2.3",
     "stream": "0.0.2",
-    "tslib": "^1.13.0",
+    "tslib": "^2.0.0",
     "utf-8-validate": "^5.0.2",
     "webpack-subresource-integrity": "^1.4.1",
     "wfk-montserrat": "^1.0.0",
     "wfk-poppins": "^1.0.0",
-    "zone.js": "^0.10.3"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.901.10",
-    "@angular-devkit/core": "^9.1.10",
-    "@angular/cli": "^9.1.10",
-    "@angular/compiler-cli": "^9.1.12",
-    "@angular/language-service": "^9.1.12",
-    "@nguniversal/builders": "^9.1.1",
+    "@angular-devkit/build-angular": "^12.0.4",
+    "@angular-devkit/core": "^12.0.4",
+    "@angular/cli": "^12.0.4",
+    "@angular/compiler-cli": "^12.0.4",
+    "@angular/language-service": "^12.0.4",
+    "@nguniversal/builders": "^12.0.2",
     "@types/express": "^4.17.7",
     "@types/node": "^12.12.48",
     "guess-parser": "^0.4.18",
     "gzipper": "^3.7.0",
     "ts-node": "^8.10.2",
-    "tslint": "~5.15.0",
-    "typescript": "~3.7.5",
+    "tslint": "~6.1.0",
+    "typescript": "~4.2.4",
     "ws": "^7.3.1",
     "xhr2": "^0.2.0"
   }
