Redesign the Trello project page and migrate to bootstrap 5

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dashboard-system",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -17,6 +17,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^12.0.4",
+    "@angular/cli": "^12.0.4",
     "@angular/common": "^12.0.4",
     "@angular/compiler": "^12.0.4",
     "@angular/core": "^12.0.4",
@@ -27,21 +28,18 @@
     "@angular/router": "^12.0.4",
     "@fortawesome/fontawesome-free": "^5.13.1",
     "@nguniversal/express-engine": "^12.0.2",
-    "bootstrap": "^4.5.0",
+    "@popperjs/core": "^2.9.2",
+    "bootstrap": "^5.0.1",
     "bufferutil": "^4.0.1",
-    "canvas": "^2.6.1",
     "codelyzer": "^6.0.0",
     "express": "^4.15.2",
-    "fibers": "^4.0.3",
-    "file-saver": "^2.0.2",
+    "fibers": "^5.0.0",
+    "file-saver": "^2.0.5",
     "html-webpack-plugin": "^3.2.0",
-    "jquery": "^3.5.1",
-    "jquery-ui-dist": "^1.12.1",
-    "jsdom": "^16.2.2",
+    "jsdom": "^16.6.0",
     "jsmind": "^0.4.6",
-    "jszip": "^3.5.0",
+    "jszip": "^3.6.0",
     "ngx-toastr": "^12.1.0",
-    "popper.js": "^1.16.1",
     "rxjs": "^6.6.0",
     "sass-loader": "^8.0.2",
     "simplebar": "^4.2.3",
@@ -56,7 +54,6 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "^12.0.4",
     "@angular-devkit/core": "^12.0.4",
-    "@angular/cli": "^12.0.4",
     "@angular/compiler-cli": "^12.0.4",
     "@angular/language-service": "^12.0.4",
     "@nguniversal/builders": "^12.0.2",
