--- a/angular.json
+++ b/angular.json
@@ -47,17 +47,14 @@
             ],
             "styles": [
               "node_modules/@fortawesome/fontawesome-free/css/all.css",
-              "node_modules/bootstrap/dist/css/bootstrap.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/jsmind/style/jsmind.css",
               "node_modules/ngx-toastr/toastr.css",
               "node_modules/simplebar/dist/simplebar.css",
-              "node_modules/wfk-montserrat/montserrat.css",
-              "node_modules/wfk-poppins/poppins.css",
               "src/styles.scss"
             ],
             "scripts": [
-              "node_modules/jquery/dist/jquery.min.js",
-              "node_modules/popper.js/dist/umd/popper.js",
+              "node_modules/@popperjs/core/dist/umd/popper.min.js",
               "node_modules/file-saver/dist/FileSaver.min.js",
               "node_modules/jszip/dist/jszip.min.js",
               "node_modules/jsmind/js/jsmind.js",
