--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
     "@fortawesome/fontawesome-free": "^6.4.0",
     "bootstrap": "^5.2.3",
     "jszip": "^3.10.1",
-    "ng2-charts": "^3.0.11",
+    "ng2-charts": "^4.1.1",
     "ngx-google-analytics": "^13.0.1",
     "ngx-toastr": "^14.3.0",
     "rxjs": "^7.8.1",
     "tslib": "^2.5.3",
-    "zone.js": "~0.11.8"
+    "zone.js": "^0.13.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.3.11",
