--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@angular/animations": "^13.4.0",
     "@angular/common": "~13.4.0",
+    "@angular/compiler": "^13.4.0",
     "@angular/core": "~13.4.0",
     "@angular/forms": "~13.4.0",
     "@angular/platform-browser": "~13.4.0",
