--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "zone.js": "^0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.3.11",
+    "@angular-devkit/build-angular": "^13.3.4",
     "@angular/cli": "~13.3.11",
     "@angular/compiler-cli": "~13.4.0",
     "@nguniversal/builders": "^13.1.1",
