--- a/package.json
+++ b/package.json
@@ -32,10 +32,10 @@
     "zone.js": "^0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^13.3.4",
-    "@angular/cli": "~13.3.11",
+    "@angular-devkit/build-angular": "^16.1.4",
+    "@angular/cli": "^16.1.4",
     "@angular/compiler-cli": "~13.4.0",
-    "@nguniversal/builders": "^13.1.1",
+    "@nguniversal/builders": "^16.1.1",
     "@types/node": "^17.0.45",
     "typescript": "~4.6.4"
   }
