--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.1.4",
     "@angular/cli": "^16.1.4",
-    "@angular/compiler-cli": "~13.4.0",
+    "@angular/compiler-cli": "^16.0.0",
     "@nguniversal/builders": "^16.1.1",
     "@types/node": "^17.0.45",
     "typescript": "~4.6.4"
