--- a/angular.json
+++ b/angular.json
@@ -53,7 +53,7 @@
             ],
             "scripts": [
               "node_modules/jszip/dist/jszip.min.js",
-              "node_modules/chart.js/dist/Chart.min.js",
+              "node_modules/chart.js/dist/chart.umd.js",
               "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
             ],
             "vendorChunk": true,
