--- a/package.json
+++ b/package.json
@@ -13,30 +13,30 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^13.4.0",
-    "@angular/common": "~13.4.0",
-    "@angular/compiler": "^13.4.0",
-    "@angular/core": "~13.4.0",
-    "@angular/forms": "~13.4.0",
-    "@angular/platform-browser": "~13.4.0",
-    "@angular/platform-browser-dynamic": "~13.4.0",
-    "@angular/router": "~13.4.0",
+    "@angular/animations": "^16.1.4",
+    "@angular/common": "^16.1.4",
+    "@angular/compiler": "^16.1.4",
+    "@angular/core": "^16.1.4",
+    "@angular/forms": "^16.1.4",
+    "@angular/platform-browser": "^16.1.4",
+    "@angular/platform-browser-dynamic": "^16.1.4",
+    "@angular/router": "^16.1.4",
     "@fortawesome/fontawesome-free": "^6.4.0",
-    "bootstrap": "^5.2.3",
+    "bootstrap": "^5.3.0",
     "jszip": "^3.10.1",
-    "ng2-charts": "^3.1.1",
-    "ngx-google-analytics": "^13.0.1",
-    "ngx-toastr": "^14.3.0",
+    "ng2-charts": "^4.1.1",
+    "ngx-google-analytics": "^14.0.1",
+    "ngx-toastr": "^17.0.2",
     "rxjs": "^7.8.1",
-    "tslib": "^2.5.3",
-    "zone.js": "^0.11.4"
+    "tslib": "^2.6.0",
+    "zone.js": "0.13.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.1.4",
     "@angular/cli": "^16.1.4",
-    "@angular/compiler-cli": "^16.0.0",
+    "@angular/compiler-cli": "^16.1.4",
     "@nguniversal/builders": "^16.1.1",
-    "@types/node": "^17.0.45",
-    "typescript": "~4.6.4"
+    "@types/node": "^20.4.1",
+    "typescript": "^5.1.6"
   }
 }
