--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "1.0.0",
   "scripts": {
     "start": "ng serve",
-    "build": "ng build --prod",
+    "build": "ng build --configuration=production",
     "test": "ng test",
     "lint": "ng lint",
     "dev:ssr": "ng run DashboardSystem:serve-ssr",
     "serve:ssr": "node dist/DashboardSystem-server/main.js",
-    "build:ssr": "ng build --prod && ng run DashboardSystem:server:production",
+    "build:ssr": "ng build --configuration=production && ng run DashboardSystem:server:production",
     "prerender": "ng run DashboardSystem:prerender"
   },
   "private": true,
