--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap-icons": "^1.10.5",
     "jszip": "^3.10.1",
     "ng2-charts": "^4.1.1",
+    "ngx-google-analytics": "^14.0.1",
     "ngx-toastr": "^17.0.2",
     "rxjs": "~7.8.1",
     "tslib": "^2.6.0",
