--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "DashboardSystem": {
+    "TrelloDash": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -39,7 +39,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/DashboardSystem",
+            "outputPath": "dist/TrelloDash",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": [
@@ -97,10 +97,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "DashboardSystem:build:production"
+              "browserTarget": "TrelloDash:build:production"
             },
             "development": {
-              "browserTarget": "DashboardSystem:build:development"
+              "browserTarget": "TrelloDash:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -108,7 +108,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "DashboardSystem:build"
+            "browserTarget": "TrelloDash:build"
           }
         },
         "test": {
